test/vm/errors/compiler/scope_use_before_declare.ach
// Compiler error: variable used before declaration
// Expected: undefined variable error for `result`

print(result)
let result = 42
